Features: create tests for products, create register route, create user resource to define the format, create docs for register
